--- a/proxy/src/main/resources/static/index.html
+++ b/proxy/src/main/resources/static/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-<h1>Form with GET</h1>
+<h1>Form with CATALAN sequence</h1>
 <form action="/hello">
-    <label for="name">Name:</label><br>
-    <input type="text" id="name" name="name" value="John"><br><br>
+    <label for="name">Value for Catalan sequence:</label><br>
+    <input type="text" id="name" name="name" value=10><br><br>
     <input type="button" value="Submit" onclick="loadGetMsg()">
 </form>
 <div id="getrespmsg"></div>
@@ -21,23 +21,8 @@
     document.getElementById("getrespmsg").innerHTML =
     this.responseText;
     }
-    xhttp.open("GET", "/hello?name="+nameVar);
+    xhttp.open("GET", "/catalan?value="+nameVar);
     xhttp.send();
-    }
-</script>
-<h1>Form with POST</h1>
-<form action="/hellopost">
-    <label for="postname">Name:</label><br>
-    <input type="text" id="postname" name="name" value="John"><br><br>
-    <input type="button" value="Submit" onclick="loadPostMsg(postname)">
-</form>
-<div id="postrespmsg"></div>
-<script>
-    function loadPostMsg(name){
-    let url = "/hellopost?name=" + name.value;
-    fetch (url, {method: 'POST'})
-    .then(x => x.text())
-    .then(y => document.getElementById("postrespmsg").innerHTML = y);
     }
 </script>
 </body>
